<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCourse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddCourse">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        tools:ignore="ContentDescription, SpeakableTextPresentCheck"
        android:id="@+id/addCourseFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        app:tint="@color/white"
        app:backgroundTint="@color/WGBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add" />
    <TextView
        android:id="@+id/addCourseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_assessment_text"
        android:background="@drawable/corner_shaper"
        android:elevation="10dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/addCourseFAB"
        app:layout_constraintBottom_toBottomOf="@id/addCourseFAB"
        app:layout_constraintTop_toTopOf="@id/addCourseFAB"
        style="@style/changeThemeText"/>
    <ScrollView
        android:id="@+id/addCourseScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/changeThemeColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp">
        <LinearLayout
            android:id="@+id/addCourseLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/addCourseTitleLabel"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_title" />
                <EditText
                    android:id="@+id/addCourseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"
                    android:hint="@string/add_course_title"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:minWidth="48dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/addCourseTitleLabel"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/addCourseStartLabel"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_start"/>
                <TextView
                    android:id="@+id/addCourseStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/add_start"
                    app:layout_constraintStart_toEndOf="@id/addCourseStartLabel"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/addCourseEndLabel"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_end"/>
                <TextView
                    android:id="@+id/addCourseEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/add_end"
                    app:layout_constraintStart_toEndOf="@id/addCourseEndLabel"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/addCourseStatusLabel"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:text="@string/course_status"/>

                <Spinner
                    android:id="@+id/courseStatusSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:popupBackground="@color/WGBlue"
                    app:layout_constraintStart_toEndOf="@id/addCourseStatusLabel"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/addCourseInstructor"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:text="@string/instructor_label"/>
                <Button
                    android:id="@+id/instructorButton"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/instructor_button"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@id/addCourseInstructor"
                    app:layout_constraintEnd_toStartOf="@id/instructorAddedCheckBox"
                    tools:ignore="TouchTargetSizeCheck" />

                <CheckBox
                    android:id="@+id/instructorAddedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:backgroundTint="@color/WGBlue"
                    app:buttonIconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/instructorButton"
                    app:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/addCourseNote"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/note_label"/>
                <EditText
                    android:id="@+id/addNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="160"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:hint="@string/note_hint"
                    tools:ignore="TouchTargetSizeCheck, SpeakableTextPresentCheck"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>