<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editCourse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditCourse">

    <ScrollView
        android:id="@+id/editCourseScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/changeThemeColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp">
        <LinearLayout
            android:id="@+id/editCourseLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/editCourseTitleLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_title" />
                <EditText
                    android:id="@+id/editCourseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"
                    android:hint="@string/edit_course_title"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:minWidth="48dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/editCourseTitleLabel"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/editCourseStartLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_start"/>
                <TextView
                    android:id="@+id/editCourseStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/add_start"
                    app:layout_constraintStart_toEndOf="@id/editCourseStartLabel"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/editCourseEndLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_end"/>
                <TextView
                    android:id="@+id/editCourseEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/add_end"
                    app:layout_constraintStart_toEndOf="@id/editCourseEndLabel"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/editCourseStatusLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/course_status"/>

                <Spinner
                    android:id="@+id/editCourseStatusSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:popupBackground="@color/WGBlue"
                    app:layout_constraintStart_toEndOf="@id/editCourseStatusLabel"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/editInstructorFirstLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/instructor_first"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editInstructorFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:hint="@string/hint_first"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:maxLength="20"
                    android:minWidth="48dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/editInstructorFirstLabel"
                    tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/editInstructorLastLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/instructor_last"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editInstructorLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:hint="@string/hint_last"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:maxLength="20"
                    android:minWidth="48dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/editInstructorLastLabel"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/editInstructorPhoneLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/instructor_phone"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/editInstructorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:hint="@string/hint_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone|number"
                    android:minWidth="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/editInstructorPhoneLabel"
                    tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/editInstructorEmailLabel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_email"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editInstructorEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minWidth="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/editInstructorEmailLabel"
                    tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/editCourseNote"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:text="@string/note_label_edit"/>
                <EditText
                    android:id="@+id/editNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="160"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:hint="@string/note_hint"
                    tools:ignore="TouchTargetSizeCheck, SpeakableTextPresentCheck"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:imeOptions="actionDone"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"/>
            </LinearLayout>
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->
<!--                <TextView-->
<!--                    android:id="@+id/assessmentRecyclerLabel"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/course_assessments"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:layout_marginStart="5dp"-->
<!--                    app:layout_constraintTop_toBottomOf="parent"-->
<!--                    app:layout_constraintBottom_toTopOf="@id/editCourseAssessmentRecycler"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"/>-->
<!--            </LinearLayout>-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->
<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:id="@+id/editCourseAssessmentRecycler"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:layout_marginBottom="5dp"-->
<!--                    android:layout_marginStart="15dp"-->
<!--                    android:layout_marginEnd="15dp" />-->
<!--            </LinearLayout>-->
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>